force-app/main/default/objects/SERVICE_CORE_DEVICE_MNG__x/SERVICE_CORE_DEVICE_MNG__x.object-meta.xml
<CustomObject>
    <description>SERVICE_CORE_DEVICE_MNG</description>
    <externalDataSource>sights_dev_db</externalDataSource>
    <externalName>SERVICE_CORE_DEVICE_MNG</externalName>
    <label>サービスコアデバイス管理</label>
</CustomObject>