force-app/main/default/objects/SERVICE_CORE_DEVICE_MNG__x/fields/del_flag__c.field-meta.xml
<CustomField>
    <fullName>del_flag__c</fullName>
    <description>del_flag</description>
    <externalDeveloperName>del_flag</externalDeveloperName>
    <label>削除フラグ</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>