force-app/main/default/objects/SERVICE_CORE_DEVICE_MNG__x/fields/device_mng_id__c.field-meta.xml
<CustomField>
    <fullName>device_mng_id__c</fullName>
    <description>device_mng_id</description>
    <externalDeveloperName>device_mng_id</externalDeveloperName>
    <label>機器管理</label>
    <length>36</length>
    <referenceTo>DEVICE_MNG__x</referenceTo>
    <relationshipLabel>サービスコアデバイス管理</relationshipLabel>
    <relationshipName>service_core_device_mngs</relationshipName>
    <type>ExternalLookup</type>
</CustomField>