force-app/main/default/objects/SERVICE_CORE_DEVICE_MNG__x/fields/service_core_device_mng_id__c.field-meta.xml
<CustomField>
    <fullName>service_core_device_mng_id__c</fullName>
    <description>service_core_device_mng_id</description>
    <externalDeveloperName>service_core_device_mng_id</externalDeveloperName>
    <label>サービスコアデバイス管理ID</label>
    <length>36</length>
    <type>Text</type>
</CustomField>