force-app/main/default/objects/SERVICE_CORE_DEVICE_MNG__x/fields/service_core_id__c.field-meta.xml
<CustomField>
    <fullName>service_core_id__c</fullName>
    <description>service_core_id</description>
    <externalDeveloperName>service_core_id</externalDeveloperName>
    <label>サービスコア</label>
    <length>36</length>
    <referenceTo>SERVICE_CORE__x</referenceTo>
    <relationshipLabel>サービスコアデバイス管理</relationshipLabel>
    <relationshipName>service_core_device_mngs</relationshipName>
    <type>ExternalLookup</type>
</CustomField>